# cli-todo

./: README.md  pyproject.toml
src/cli_todo/: __main__.py  cli.py
