[project]
name = "cli_todo"
version = "0.1.0"
description = "A simple cli todo manager"
authors = [
    { name = "Oyunsky", email = "cardisntvalid@yandex.ru" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
todo = "cli_todo.cli:app"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
